# atm_htmlgen

./: .gitignore  Cargo.toml  README.md  test.gen  test.out  test2.gen
cin/: auxtreevis.js
intromath/: abstract_algebra.gen  attribution.gen  cardinality.gen  deductive_reasoning.gen  entry.gen  first_order_logic.gen  higher_order_logic.gen  homogeneous_relations.gen  index.gen  induction.gen  main.css  propositional_logic.gen  sets.gen  tex.js
intromath/assets/: animation.js  bitvec.js  chapter_induction.js  chapter_sets.js  euler_diagrams.css  euler_diagrams.js  expressions.js  floating-ui.dom.min.js  fonts.css  geometry.js  induction.css  induction.js  interactive_expressions.js  katex.min.js  main.css  previews.js  random.js  sets.css  tooltips.js  tree_layout.js  trees.js
intromath/euler_diagrams/: equality.html  intersection.html  powerset.html  setminus.html  subset.html  subseteq.html  union.html  vanilla.html  vanilla_no_controls.html
src/: hsections.rs  macros.rs  main.rs  parse.rs  set_examples.rs
stylereference/: entry.gen  main.css.gen
stylereference/assets/: previews.js
stylereference/previews/: boxless_definition.html  conjecture.html  corollary.html  example.html  exercise.html  lemma.html  observation.html  rec.html  statement.html
tmp/: sets.gen  test.out  tooltips.html
