[package]
name = "atm_htmlgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sourcefile = "0.2.1"
ropey = "1.3.1"
thiserror = "1.0.30"
serde = "1.0.132"
atm_parser_helper = "1.0.0"
valuable_value = "1.0.0"
fs_extra = "1.2.0"
# unix_path = "1.0.1"
